--- a/Worldwide-Migration-Vis/main-page.html
+++ b/Worldwide-Migration-Vis/main-page.html
@@ -26,7 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 
     <!-- LOCOMOTIVE -->
-    <script src="index.js" crossorigin="anonymous" type="text/JavaScript"></script>
+    <script src="scripts/index.js" crossorigin="anonymous" type="text/JavaScript"></script>
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
